Update flags