@@ -58,6 +58,7 @@ ZGC=false               #The Z Garbage Collector. Please read: https://krusic22.
 EXP=false               #Enable experimental stuff... It might cause unexpected problems but I haven't noticed any yet.
 LP=false                #Enable only if you have Large/Huge Pages enabled, transparent pages are recommended for regular users.
 X86=false               #Flags that should only work on X86.
+ILL_ACCESS=false        #Flags to access internal java classes
 #Some advanced flags from https://github.com/etil2jz/etil-minecraft-flags (untested)
 ADV=false               #Advanced flags
 GRAAL=false             #Flags only works on GraalVM
@@ -84,7 +85,29 @@ PARMS="
 -XX:+ShowCodeDetailsInExceptionMessages
 -XX:+DisableExplicitGC
 -XX:+PerfDisableSharedMem
---illegal-access=permit
+"
+# Access Flags
+ACCESS_PARMS="
+--add-opens java.base/java.lang=ALL-UNNAMED
+--add-opens java.base/java.math=ALL-UNNAMED
+--add-opens java.base/java.io=ALL-UNNAMED
+--add-opens java.base/java.util=ALL-UNNAMED
+--add-opens java.base/java.util.stream=ALL-UNNAMED
+--add-opens java.base/java.text=ALL-UNNAMED
+--add-opens java.base/java.util.regex=ALL-UNNAMED
+--add-opens java.base/java.nio.channels.spi=ALL-UNNAMED
+--add-opens java.base/sun.nio.ch=ALL-UNNAMED
+--add-opens java.base/java.net=ALL-UNNAMED
+--add-opens java.base/java.util.concurrent=ALL-UNNAMED
+--add-opens java.base/sun.nio.fs=ALL-UNNAMED
+--add-opens java.base/sun.nio.cs=ALL-UNNAMED
+--add-opens java.base/java.nio.file=ALL-UNNAMED
+--add-opens java.base/java.nio.charset=ALL-UNNAMED
+--add-opens java.base/java.lang.reflect=ALL-UNNAMED
+--add-opens java.logging/java.util.logging=ALL-UNNAMED
+--add-opens java.base/java.lang.ref=ALL-UNNAMED
+--add-opens java.base/java.util.jar=ALL-UNNAMED
+--add-opens java.base/java.util.zip=ALL-UNNAMED
 "
 # Advanced Parameters
 ADVPARMS="
@@ -119,6 +142,7 @@ ADVPARMS="
 -XX:+UseXmmLoadAndClearUpper
 -XX:+UseXmmRegToRegMoveAll
 -Djdk.nio.maxCachedBufferSize=262144
+--add-modules jdk.incubator.vector
 "
 # GraalVM Parameters
 GRAALPARMS="
@@ -134,6 +158,7 @@ GRAALPARMS="
 -Dgraal.VectorizeSIMD=true
 -Dgraal.StripMineNonCountedLoops=true
 -Dgraal.SpeculativeGuardMovement=true
+-Dgraal.InfeasiblePathCorrelation=true
 "
 # G1 optimizations...
 GONEP="
@@ -177,15 +202,17 @@ SHENP="
 -XX:ShenandoahRegionSamplingRate=40
 "
 #ZGC options. Most of them only available in JDK13+.
-#Copy them to the ZGCP area.
-#-XX:-ZUncommit
-#-XX:ZUncommitDelay=300
-#-XX:SoftMaxHeapSize=4G
-#-XX:+ZCollectionInterval=5
-#-XX:ZAllocationSpikeTolerance=2.0
 ZGCP="
-
+-XX:-ZUncommit
+-XX:ZUncommitDelay=300
+-XX:SoftMaxHeapSize=4G
+-XX:+ZCollectionInterval=5
+-XX:ZAllocationSpikeTolerance=2.0
 "
+#Access options
+if [ "$ILL_ACCESS" = true ]; then
+    PARMS="$PARMS $ACCESS_PARMS"
+fi
 #Advanced options
 if [ "$ADV" = true ]; then
     echo "You have enabled Advanced Options! Use at your own risk!"
